# eos

./: .flake8  .gitattributes  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  _config.yml  data.dvc  docker-compose.yml  lint.sh  mypy.ini  pyproject.toml  test-results.xml  test.sh
.dvc/: config
.dvc/tmp/: lock  state  updater
.github/workflows/: general.yml  github.yml
conf/base/: catalog.yml  parameters.yml  pipelines.yml
data/01_raw/: games.csv  industrial_business_theme_descriptions.jsonl  teams.csv
data/02_intermediate/: source_themes.json
data/03_primary/: edge_dfs.json  node_dfs.json
eos/: __init__.py  create_graph.py  orchestrator.py  utils.py
eos/classes/: feature_concatenator.py  gcn.py
eos/datasets/: autoencoder_dataset.py  dataloader_dataset.py  dgl_dataset.py  gcn_dataset.py
eos/dock/: __init__.py  unload.py
eos/factory/: __init__.py  apply_gcn.py  concat_feature.py  create_graph.py  define_gnn.py
eos/mine/: dig_data.py
eos/nodes/: autoencoder.py  geometric_deep_learning.py  graph_creator.py  ordinal_encoder.py
eos/office/: app.py  core.py  utils.py  viz.py
eos/refinery/: create_graph.py  embed_table.py  link_node.py
eos/utils/: dgl_utils.py  kedro_extension.py
eos/warehouse/: autoencoder.py  autoencoder_dataset.py  csv_dataset.py  dataloader_dataset.py  dgl_dataset.py  feature_concatenator.py  gcn.py  gcn_dataset.py  networkx_dataset.py  preprocess_encoder.py  torch_dataset.py
notebooks/: edge_parsing.ipynb  explore_kg.ipynb  huggingface_inference_api.ipynb  kg.html  query_openai.ipynb
scripts/: project_entry_point.sh
tests/: conftest.py
tests/data/: catalog.yml  mock_edge_dfs.json  mock_industrial_business_theme_descriptions.jsonl  mock_node_dfs.json  mock_raw_source_themes.jsonl  mock_source_themes.json
tests/data_interfaces/: test_edge_dfs_data_interface.py  test_node_dfs_data_interface.py  test_nx_g_data_interface.py  test_src_themes_data_interface.py
tests/e2e/: test_e2e.py
tests/integration/: test_dock.py  test_embed_table.py  test_feature_concatenator.py  test_graph_creator.py  test_node_linker.py  test_viz.py  (+2 more)
(+56 files in other folders)
